cncProd/force-app/main/default/objects/Test_Drive_Vehicle_Checklist__c/Test_Drive_Vehicle_Checklist__c.object-meta.xml
<CustomObject>
    <label>Test Drive Vehicle Checklist</label>
    <nameField>
        <displayFormat>CCR{00000000}</displayFormat>
        <label>Condition Checklist Ref ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drive Vehicle Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>