cncProd/force-app/main/default/objects/Test_Drive_Vehicle_Checklist__c/fields/Cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness__c</fullName>
    <label>Cleanliness</label>
    <length>200</length>
    <type>Text</type>
</CustomField>