cncProd/force-app/main/default/objects/Test_Drive_Vehicle_Checklist__c/fields/Comm_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Comm_Reg_No__c</fullName>
    <formula>IF( ISBLANK(Model__r.Comm_No__c) , IF( ISBLANK(Model__r.Registration_No__c) , &quot;&quot; , Model__r.Registration_No__c) , IF( ISBLANK(Model__r.Registration_No__c) , Model__r.Comm_No__c , Model__r.Comm_No__c &amp; &quot;/&quot; &amp;  Model__r.Registration_No__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comm/Reg No</label>
    <type>Text</type>
</CustomField>