cncProd/force-app/main/default/objects/Test_Drive_Vehicle_Checklist__c/fields/Mileage_at_End__c.field-meta.xml
<CustomField>
    <fullName>Mileage_at_End__c</fullName>
    <label>Mileage Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>