cncProd/force-app/main/default/objects/Test_Drive_Vehicle_Checklist__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipName>Vehicle_Condition_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>