cncProd/force-app/main/default/objects/Test_Drive_Vehicle_Checklist__c/fields/Petrol_Level_Evening__c.field-meta.xml
<CustomField>
    <fullName>Petrol_Level_Evening__c</fullName>
    <label>Petrol Close</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>1/4</fullName>
            </value>
            <value>
                <fullName>1/2</fullName>
            </value>
            <value>
                <fullName>3/4</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>