cncProd/force-app/main/default/objects/Test_Drive_Vehicle_Checklist__c/listViews/Today_Checklist.listView-meta.xml
<ListView>
    <fullName>Today_Checklist</fullName>
    <columns>Model__c</columns>
    <columns>Mileage_at_Start__c</columns>
    <columns>Mileage_at_End__c</columns>
    <columns>Petrol_Level_Morning__c</columns>
    <columns>Key_is_Present_Evening__c</columns>
    <columns>Key_is_Present_Morning__c</columns>
    <columns>Cleanliness__c</columns>
    <columns>Additional_Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Checklist</label>
</ListView>